lab03/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC
   24       | error RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI
   34     | Exp error ELSE Stmt

   35 DefList: Def DefList
   36        | %empty

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT
   60    | Exp LB error RB

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error <node> (256) 24 33 34 60
STRUCT <node> (258) 11 12
RETURN <node> (259) 29
IF <node> (260) 30 31
ELSE <node> (261) 31 34
WHILE <node> (262) 32
TYPE <node> (263) 9
ID <node> (264) 13 15 16 18 19 53 54 56 57
FLOAT <node> (265) 59
INT <node> (266) 17 58
SEMI <node> (267) 4 5 27 29 33 37
COMMA <node> (268) 8 20 39 61
ASSIGNOP <node> (269) 41 42
RELOP <node> (270) 45
PLUS <node> (271) 46
MINUS <node> (272) 47 51
STAR <node> (273) 48
AND <node> (274) 43
OR <node> (275) 44
DOT <node> (276) 56
NOT <node> (277) 52
LP <node> (278) 18 19 30 31 32 50 53 54
RP <node> (279) 18 19 30 31 32 50 53 54
LB <node> (280) 17 55 60
RB <node> (281) 17 55 60
LC <node> (282) 11 23
RC <node> (283) 11 23 24
DIV <node> (284) 49
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program <node> (32)
    on left: 1, on right: 0
ExtDefList <node> (33)
    on left: 2 3, on right: 1 2
ExtDef <node> (34)
    on left: 4 5 6, on right: 2
ExtDecList <node> (35)
    on left: 7 8, on right: 4 8
Specifier <node> (36)
    on left: 9 10, on right: 4 5 6 22 37
StructSpecifier <node> (37)
    on left: 11 12, on right: 10
OptTag <node> (38)
    on left: 13 14, on right: 11
Tag <node> (39)
    on left: 15, on right: 12
VarDec <node> (40)
    on left: 16 17, on right: 7 8 17 22 40 41
FunDec <node> (41)
    on left: 18 19, on right: 6
VarList <node> (42)
    on left: 20 21, on right: 18 20
ParamDec <node> (43)
    on left: 22, on right: 20 21
CompSt <node> (44)
    on left: 23 24, on right: 6 28
StmtList <node> (45)
    on left: 25 26, on right: 23 25
Stmt <node> (46)
    on left: 27 28 29 30 31 32 33 34, on right: 25 30 31 32 34
DefList <node> (47)
    on left: 35 36, on right: 11 23 35
Def <node> (48)
    on left: 37, on right: 35
DecList <node> (49)
    on left: 38 39, on right: 37 39
Dec <node> (50)
    on left: 40 41, on right: 38 39
Exp <node> (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60, on right: 27 29 30 31 32 34 41 42 43 44 45 46 47 48 49 50 51
    52 55 56 60 61 62
Args <node> (52)
    on left: 61 62, on right: 53 61


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 23
    LC     shift, and go to state 24

    CompSt  go to state 25


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 29

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

   24 CompSt: error . RC

    RC  shift, and go to state 36


State 24

   23 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   37 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   35 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 30

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 21 (VarList)


State 33

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 34

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 35

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 36

   24 CompSt: error RC .

    $default  reduce using rule 24 (CompSt)


State 37

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    RETURN  shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    ID      shift, and go to state 51
    FLOAT   shift, and go to state 52
    INT     shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 24

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 38

   17 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 22

    $default  reduce using rule 40 (Dec)


State 39

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 38 (DecList)


State 41

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 42

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


State 43

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 44

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 45

   20 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 47

   24 CompSt: error . RC
   33 Stmt: error . SEMI

    SEMI  shift, and go to state 65
    RC    shift, and go to state 36


State 48

   29 Stmt: RETURN . Exp SEMI

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 66


State 49

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 67


State 50

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 68


State 51

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 69

    $default  reduce using rule 57 (Exp)


State 52

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 53

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 54

   51 Exp: MINUS . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 70


State 55

   52 Exp: NOT . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 71


State 56

   50 Exp: LP . Exp RP

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 72


State 57

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 58

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 59

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    RETURN  shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    ID      shift, and go to state 51
    FLOAT   shift, and go to state 52
    INT     shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 24

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


State 60

   27 Stmt: Exp . SEMI
   34     | Exp . error ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    error     shift, and go to state 75
    SEMI      shift, and go to state 76
    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    DIV       shift, and go to state 86


State 61

   41 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 87


State 62

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


State 63

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 88
    Dec      go to state 40


State 64

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 65

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 66

   29 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    SEMI      shift, and go to state 89
    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    DIV       shift, and go to state 86


State 67

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 90


State 68

   32 Stmt: WHILE LP . Exp RP Stmt

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 91


State 69

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 92

    Exp   go to state 93
    Args  go to state 94


State 70

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 51 (Exp)


State 71

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 52 (Exp)


State 72

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 95
    LB        shift, and go to state 85
    DIV       shift, and go to state 86


State 73

   23 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 23 (CompSt)


State 74

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 75

   34 Stmt: Exp error . ELSE Stmt

    ELSE  shift, and go to state 96


State 76

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 77

   42 Exp: Exp ASSIGNOP . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 97


State 78

   45 Exp: Exp RELOP . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 98


State 79

   46 Exp: Exp PLUS . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 99


State 80

   47 Exp: Exp MINUS . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 100


State 81

   48 Exp: Exp STAR . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 101


State 82

   43 Exp: Exp AND . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 102


State 83

   44 Exp: Exp OR . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 103


State 84

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 104


State 85

   55 Exp: Exp LB . Exp RB
   60    | Exp LB . error RB

    error  shift, and go to state 105
    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 106


State 86

   49 Exp: Exp DIV . Exp

    ID     shift, and go to state 51
    FLOAT  shift, and go to state 52
    INT    shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 107


State 87

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    DIV       shift, and go to state 86

    $default  reduce using rule 41 (Dec)


State 88

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


State 89

   29 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 90

   30 Stmt: IF LP Exp . RP Stmt
   31     | IF LP Exp . RP Stmt ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 108
    LB        shift, and go to state 85
    DIV       shift, and go to state 86


State 91

   32 Stmt: WHILE LP Exp . RP Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 109
    LB        shift, and go to state 85
    DIV       shift, and go to state 86


State 92

   54 Exp: ID LP RP .

    $default  reduce using rule 54 (Exp)


State 93

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB
   61 Args: Exp . COMMA Args
   62     | Exp .

    COMMA     shift, and go to state 110
    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    DIV       shift, and go to state 86

    $default  reduce using rule 62 (Args)


State 94

   53 Exp: ID LP Args . RP

    RP  shift, and go to state 111


State 95

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


State 96

   34 Stmt: Exp error ELSE . Stmt

    error   shift, and go to state 47
    RETURN  shift, and go to state 48
    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    ID      shift, and go to state 51
    FLOAT   shift, and go to state 52
    INT     shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 24

    CompSt  go to state 57
    Stmt    go to state 112
    Exp     go to state 60


State 97

   42 Exp: Exp . ASSIGNOP Exp
   42    | Exp ASSIGNOP Exp .
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    DIV       shift, and go to state 86

    $default  reduce using rule 42 (Exp)


State 98

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   45    | Exp RELOP Exp .
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 45 (Exp)


State 99

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   46    | Exp PLUS Exp .
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 46 (Exp)


State 100

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   47    | Exp MINUS Exp .
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 47 (Exp)


State 101

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   48    | Exp STAR Exp .
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 48 (Exp)


State 102

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   43    | Exp AND Exp .
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 43 (Exp)


State 103

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   44    | Exp OR Exp .
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 44 (Exp)


State 104

   56 Exp: Exp DOT ID .

    $default  reduce using rule 56 (Exp)


State 105

   60 Exp: Exp LB error . RB

    RB  shift, and go to state 113


State 106

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   55    | Exp LB Exp . RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 77
    RELOP     shift, and go to state 78
    PLUS      shift, and go to state 79
    MINUS     shift, and go to state 80
    STAR      shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    RB        shift, and go to state 114
    DIV       shift, and go to state 86


State 107

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   49    | Exp DIV Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60    | Exp . LB error RB

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 49 (Exp)


State 108

   30 Stmt: IF LP Exp RP . Stmt
   31     | IF LP Exp RP . Stmt ELSE Stmt
